--- a/Endeca-Cartridge-ATG-CRS.html
+++ b/Endeca-Cartridge-ATG-CRS.html
@@ -314,7 +314,8 @@ a HelloWorld.jsp. Copy this JSP into the browse folder in "store.war".  You may 
       <ul class="side-nav">
         <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
-        <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>       
+        <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
+        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>      
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
