--- a/chef.html
+++ b/chef.html
@@ -61,14 +61,11 @@ In this tutorial we will setup a <br>
 
 <h4><a href="#">Chef Architecture</a></h4>
 <p>
-Here is the architecture of Chef. 
-</p>
-<br>
+Here is the architecture of Chef.
 <p>
 <div class="large-12 columns">
 <image src="http://technoon.github.io/lessons/images/chef.png"/>
 </div>
-</p>
 
 <br>
 <h4><a href="#">Elements of Chef</a></h4>
@@ -193,7 +190,7 @@ The package statement will install the apache, service statement will enable & s
 </p>
 </div>
 </div>
-<br>
+<br><br>
 
 <div class="panel">
 <pre>
@@ -276,7 +273,8 @@ Open the browser and access the ChefTestNode e.g. uvo1m2po3z567x4rytt.vm.cld.sr
       <ul class="side-nav">
         <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
-        <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>       
+        <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
+        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>    
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
