--- a/arduino.html
+++ b/arduino.html
@@ -156,7 +156,8 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
       <ul class="side-nav">
         <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
-        <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>       
+        <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
+        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>    
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
