--- a/arduino.html
+++ b/arduino.html
@@ -163,9 +163,9 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
       </ul>
  
       <div class="panel">
-        <h5>Check ATG & Endeca Tutorials</h5>
+        <h5>Check the Chef Tutorials</h5>
         <p></p>
-        <a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">Read More →</a>
+        <a href="http://technoon.github.io/lessons/chef">Read More →</a>
       </div>
  
     </aside>
