--- a/chef.html
+++ b/chef.html
@@ -125,11 +125,11 @@ knife client list
 
 <h4><a href="#">Setup the Node (VM)</a></h4>
 <p>
-Cloudshare (partner of Chef org) gives a hosted node VM for testing the chef. This is trial VM and after few days it gets recycled. 
-1. Access the URL <i>"http://opscode-cheflab.herokuapp.com/labs/learnchef/centos/attend"</i> and register with cloudshare
-2. After registration click on the button 'Start Using Thish Environment'
-3. Cloudshare will provision a 'CentOS' VM
-4. Collect the details about the node (External address, username & password)
+Cloudshare (partner of Chef org) gives a hosted node VM for testing the chef. This is trial VM and after few days it gets recycled. <br>
+1. Access the URL <i>"http://opscode-cheflab.herokuapp.com/labs/learnchef/centos/attend"</i> and register with cloudshare<br>
+2. After registration click on the button 'Start Using Thish Environment'<br>
+3. Cloudshare will provision a 'CentOS' VM<br>
+4. Collect the details about the node (External address, username & password)<br>
 </p>
 <br>
 
