--- a/chef.html
+++ b/chef.html
@@ -246,7 +246,7 @@ ssh into ChefTestNode VM and run the chef client. This will get the run-list fro
 <br>
 <div class="panel">
 <pre>
-ssh root@<your_node_name>
+ssh root@&lt;your_node_name&gt;
 
 sudo chef-client
 </pre>
