--- a/mongodb-nodejs.html
+++ b/mongodb-nodejs.html
@@ -32,7 +32,7 @@
  
 <article>
  
-<h6>Written by <a href="#">Rajeshkumar Venkatesan</a> on Jan, 2014.</h6>
+<h6>Written by <a href="#">Rajesh V</a> on Jan, 2014.</h6>
 
 <br>
 
@@ -280,7 +280,7 @@ function renderResult(res, prds, msg) {
         <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
-        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>    
+        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
