--- a/chef.html
+++ b/chef.html
@@ -32,7 +32,7 @@
 <div class="large-9 columns" role="content">
  
 <article>
-<h6>Written by <a href="#">Rajeshkumar Venkatesan</a> on Aug, 2014.</h6>
+<h6>Written by <a href="#">Rajesh V</a> on Aug, 2014.</h6>
 
 <div class="row">
   <div class="large-12 columns">
@@ -252,7 +252,7 @@ sudo chef-client
 <div class="large-12 columns">
   <image src="http://technoon.github.io/lessons/images/run-list.png"/>
 </div>
-<br>
+<br><br><br>
 
 <h4><a href="#">Accessing the sample html page</a></h4>
 <p>
