--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  
 <article>
  
-<h6>Written by <a href="#">Rajeshkumar Venkatesan</a> on Jan, 2014.</h6>
+<h6>Written by <a href="#">Rajesh V</a> on Jan, 2014.</h6>
 
 <br>
 
