--- a/chef.html
+++ b/chef.html
@@ -249,14 +249,18 @@ sudo chef-client
 </pre>
 </div>
 <br>
+
+<p>
 <div class="large-12 columns">
   <image src="http://technoon.github.io/lessons/images/run-list.png"/>
 </div>
-<br><br><br>
+<br>
+</p>
 
 <h4><a href="#">Accessing the sample html page</a></h4>
 <p>
-Open the browser and access the ChefTestNode e.g. uvo1m2po3z567x4rytt.vm.cld.sr  
+Open the browser and access the ChefTestNode. You will see the contents in index.html. <br> 
+e.g. <i>http://uvo1m2po3z567x4rytt.vm.cld.sr</i>
 </p>  
 <br>
 <p>Happy Coding !</p>
