--- a/chef.html
+++ b/chef.html
@@ -2,10 +2,10 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="keywords" content="chef, puppet, getchef, learnchef"/>
+    <meta name="keywords" content="chef, puppet, getchef, learnchef, how to install chef, simple chef example, chef example"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Technoon Tutorial - Chef</title>
+    <title>Technoon Tutorial - Chef installation</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -248,16 +248,13 @@ ssh root@&lt;your_node_name&gt;
 sudo chef-client
 </pre>
 </div>
-<br>
 
-<p>
 <div class="large-12 columns">
   <image src="http://technoon.github.io/lessons/images/run-list.png"/>
 </div>
 <br>
-</p>
 
-<h4><a href="#">Accessing the sample html page</a></h4>
+<h4><a href="#">Accessing the index.html</a></h4>
 <p>
 Open the browser and access the ChefTestNode. You will see the contents in index.html. <br> 
 e.g. <i>http://uvo1m2po3z567x4rytt.vm.cld.sr</i>
@@ -268,7 +265,6 @@ e.g. <i>http://uvo1m2po3z567x4rytt.vm.cld.sr</i>
 </div>
 
 <!-- End Main Content -->
-
 
 
 <!-- Sidebar -->
