--- a/chef.html
+++ b/chef.html
@@ -38,7 +38,7 @@
   <div class="large-12 columns">
   <h4><a href="#">Preface</a></h4>
   <p>In this automation decade, we have seen many automation in software life cycle.  But chef brings in automation to the next level. 
-  The infrastructure automation.  With Chef, you can automate how you build, deploy, and manage your infrastructure. Your infrastructure becomes as versionable, testable, and repeatable as application code.  Here you go... IAAC (Infrastructure as a code).
+  The infrastructure automation.  With Chef, you can automate how you build, deploy, and manage your infrastructure. Your infrastructure becomes a versionable, testable, and repeatable as application code.  Here you go... IAAC (Infrastructure as a code).
   </p>
   </div>
 </div>
