--- a/chef.html
+++ b/chef.html
@@ -275,8 +275,8 @@ e.g. <i>http://uvo1m2po3z567x4rytt.vm.cld.sr</i>
         <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
-        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>    
-        <li><a href="#">Knockout JS</a></li>
+        <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>    
+        <li><a href="#">Angular.js</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
  
