--- a/mongodb-nodejs.html
+++ b/mongodb-nodejs.html
@@ -281,7 +281,7 @@ function renderResult(res, prds, msg) {
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
         <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>
-        <li><a href="#">Knockout JS</a></li>
+        <li><a href="#">Angular.js</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
  
