--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ function renderResult(res, prds, msg) {
         <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
-        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>      
+        <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>      
         <li><a href="#">Angular.js</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
