--- a/Endeca-Cartridge-ATG-CRS.html
+++ b/Endeca-Cartridge-ATG-CRS.html
@@ -315,7 +315,7 @@ a HelloWorld.jsp. Copy this JSP into the browse folder in "store.war".  You may 
         <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
-        <li><a href="http://technoon.github.io/lessons/chef">Chef - IAAC</a></li>      
+        <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>      
         <li><a href="#">Angular.js</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
