--- a/Endeca-Cartridge-ATG-CRS.html
+++ b/Endeca-Cartridge-ATG-CRS.html
@@ -317,7 +317,7 @@ a HelloWorld.jsp. Copy this JSP into the browse folder in "store.war".  You may 
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>      
         <li><a href="#">Angular.js</a></li>
-        <li><a href="#">Rasberry Pi</a></li>
+        <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
       </ul>
  
       <div class="panel">
