--- a/mongodb-nodejs.html
+++ b/mongodb-nodejs.html
@@ -282,7 +282,7 @@ function renderResult(res, prds, msg) {
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>
         <li><a href="#">Angular.js</a></li>
-        <li><a href="#">Rasberry Pi</a></li>
+        <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
       </ul>
  
       <div class="panel">
