--- a/arduino.html
+++ b/arduino.html
@@ -159,7 +159,7 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
         <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>    
         <li><a href="#">Angular.js</a></li>
-        <li><a href="#">Rasberry Pi</a></li>
+        <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
       </ul>
  
       <div class="panel">
