--- a/paymentgateway.html
+++ b/paymentgateway.html
@@ -75,6 +75,8 @@ might be required for your customer service operations, but it is optional<br>
 </div>
 <br>
 
+<image src="http://technoon.github.io/lessons/images/payment.png"/>
+<br>
 
 <div class="row">
 <h4><a href="#">4. Point of Sale (POS)</a></h4>
@@ -108,7 +110,7 @@ payment terminal demands different encryption techniques<br>
 payment page)
 2. Payment page hosted by the merchant (Your .com site) and http post of 
 data to payment provider
-<code><br>
+</code><br>
 Both the options work fine, but you select the option which gives better customer 
 experience for your brand<br>
 - Many providers allow merchants to customize the hosted payment page on their 
