--- a/paymentgateway.html
+++ b/paymentgateway.html
@@ -75,7 +75,9 @@ might be required for your customer service operations, but it is optional<br>
 </div>
 <br>
 
+<div class="row">
 <image src="http://technoon.github.io/lessons/images/payment.png"/>
+</div>
 <br>
 
 <div class="row">
@@ -107,7 +109,7 @@ payment terminal demands different encryption techniques<br>
 - There is couple of ways of capturing the payments in eCommerce sites <br>
 <code>
 1. Hosted payment page by the payment provider (inline frame or separate 
-payment page)
+payment page) <br>
 2. Payment page hosted by the merchant (Your .com site) and http post of 
 data to payment provider
 </code><br>
