--- a/paymentgateway.html
+++ b/paymentgateway.html
@@ -108,9 +108,9 @@ payment terminal demands different encryption techniques<br>
 <p>
 - There is couple of ways of capturing the payments in eCommerce sites <br>
 <code>
-1. Hosted payment page by the payment provider (inline frame or separate 
+&tab;1. Hosted payment page by the payment provider (inline frame or separate 
 payment page) <br>
-2. Payment page hosted by the merchant (Your .com site) and http post of 
+&tab;2. Payment page hosted by the merchant (Your .com site) and http post of 
 data to payment provider
 </code><br>
 Both the options work fine, but you select the option which gives better customer 
