--- a/paymentgateway.html
+++ b/paymentgateway.html
@@ -107,12 +107,12 @@ payment terminal demands different encryption techniques<br>
 <h4><a href="#">5. Ecommerce</a></h4>
 <p>
 - There is couple of ways of capturing the payments in eCommerce sites <br>
-<code>
-&tab;1. Hosted payment page by the payment provider (inline frame or separate 
-payment page) <br>
-&tab;2. Payment page hosted by the merchant (Your .com site) and http post of 
+<pre>
+     1. Hosted payment page by the payment provider (inline frame or separate 
+payment page)
+     2. Payment page hosted by the merchant (Your .com site) and http post of 
 data to payment provider
-</code><br>
+</pre><br>
 Both the options work fine, but you select the option which gives better customer 
 experience for your brand<br>
 - Many providers allow merchants to customize the hosted payment page on their 
