--- a/personalization.html
+++ b/personalization.html
@@ -43,18 +43,19 @@ There are plenty of personalization software tools available in the market which
 recommendated items for a given product or a shopping cart. 
 <br>
 <pre>
-e.g. 
-	Customer who bought also bought
-	After viewed by
-	Accessories
+<code>	
+	e.g. 
+		Customer who bought also bought
+		After viewed by
+		Accessories
+</code>	
 </pre>
 
-But, the recommendation should not only come when the user is viewing a final product or after adding a 
-product into the cart.  Shouldn't it be planted when the customer is searching for a product ?	
+But, the recommendations should not only come when the user is viewing a final product or after adding a 
+product into the cart.  Shouldn't it be planted when the customer is searching for a product?	
 
 </p>
 </br>
-
 
 
 <h4><a href="#">Proposed Personalization</a></h4>
@@ -63,11 +64,13 @@ Here is the thought process, how about we personalize the product we show to the
 based on the below behaviours. 
 
 <pre>
+<code>	
  What products the customer is searching for?
  What categories the customer is browsing ?
  What refinements / facets the customer is using ?  e.g.  Price range between Rs.100 - Rs.200
  What products the customer viewing ? 
  etc.,
+</code> 
 </pre>
 </p>
 </br>
@@ -114,7 +117,7 @@ So, during the next keyword search, boost the products with these characteristic
 <h4><a href="#">Based on the Product viewed</a></h4>
 <p>
 
-	
+
 </p>
 </br>
 
