--- a/personalization.html
+++ b/personalization.html
@@ -42,14 +42,14 @@ Retailers report higher customer satisfaction & conversions by showing customer 
 There are plenty of personalization software tools available in the market which primarily bring in set of 
 recommendated items for a given product or a shopping cart. 
 <br>
-<pre>
-<code>	
+<div class="panel">	
+<pre>	
 	e.g. 
 		Customer who bought also bought
 		After viewed by
 		Accessories
-</code>	
 </pre>
+</div>
 
 But, the recommendations should not only come when the user is viewing a final product or after adding a 
 product into the cart.  Shouldn't it be planted when the customer is searching for a product?	
