--- a/personalization.html
+++ b/personalization.html
@@ -42,12 +42,12 @@ Retailers report higher customer satisfaction & conversions by showing customer 
 There are plenty of personalization software tools available in the market which primarily bring in set of 
 recommendated items for a given product or a shopping cart. 
 <br>
-<div class="panel" width="50%">	
-<pre>	
-	e.g. 
-		Customer who bought also bought
-		After viewed by
-		Accessories
+<div class="panel">	
+<pre>
+e.g:  
+Customer who bought also bought
+After viewed by
+Accessories
 </pre>
 </div>
 
