--- a/Endeca-Cartridge-ATG-CRS.html
+++ b/Endeca-Cartridge-ATG-CRS.html
@@ -318,6 +318,7 @@ a HelloWorld.jsp. Copy this JSP into the browse folder in "store.war".  You may 
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>      
         <li><a href="#">Angular.js</a></li>
         <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
+        <li><a href="http://technoon.github.io/lessons/personalization">Personalization with Search</a></li>
       </ul>
  
       <div class="panel">
