--- a/arduino.html
+++ b/arduino.html
@@ -160,6 +160,7 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>    
         <li><a href="#">Angular.js</a></li>
         <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
+        <li><a href="http://technoon.github.io/lessons/personalization">Personalization with Search</a></li>
       </ul>
  
       <div class="panel">
