--- a/paymentgateway.html
+++ b/paymentgateway.html
@@ -179,6 +179,7 @@ it is within your SLA<br>
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>    
         <li><a href="#">Angular.js</a></li>
         <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
+        <li><a href="http://technoon.github.io/lessons/personalization">Personalization with Search</a></li>
       </ul>
  
       <div class="panel">
