--- a/chef.html
+++ b/chef.html
@@ -278,6 +278,7 @@ e.g. <i>http://uvo1m2po3z567x4rytt.vm.cld.sr</i>
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>
         <li><a href="#">Angular.js</a></li>
         <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
+        <li><a href="http://technoon.github.io/lessons/personalization">Personalization with Search</a></li>
       </ul>
  
       <div class="panel">
