--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ function renderResult(res, prds, msg) {
         <li><a href="http://technoon.github.io/lessons/chef">Chef</a></li>      
         <li><a href="#">Angular.js</a></li>
         <li><a href="http://technoon.github.io/lessons/paymentgateway">Selecting Payment Gateway</a></li>
+        <li><a href="http://technoon.github.io/lessons/personalization">Personalization with Search</a></li>
       </ul>
  
       <div class="panel">
