--- a/personalization.html
+++ b/personalization.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="keywords" content="ATG, CRS, Endeca, Cartridge, New Cartridge, Experience Manager, XM, Endeca XM, Node, Node.js, MongoDB, Mongo, Mongoose, EJS, Express"/>
+    <meta name="keywords" content="Search, Personalization, Personalisation, Solr, Lucene, Solr Analytics, Analytics Using Solr"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technoon | Node & Mongo</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">    
   </head>
   <body>
 
@@ -42,14 +43,13 @@ Retailers report higher customer satisfaction & conversions by showing customer 
 There are plenty of personalization software tools available in the market which primarily bring in set of 
 recommendated items for a given product or a shopping cart. 
 <br>
-<div class="panel">
-<pre>
-e.g: 
-
-Customer who bought also bought
-After viewed by
-Accessories
-</pre>
+<div class="panel" style="font-family: 'Tangerine', serif;">
+<p>
+e.g: <br>
+Customer who bought also bought <br>
+After viewed by <br>
+Accessories <br>
+</p>
 </div>
 
 But, the recommendations should not only come when the user is viewing a final product or after adding a 
