--- a/personalization.html
+++ b/personalization.html
@@ -7,7 +7,7 @@
     <title>Technoon | Node & Mongo</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">    
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway">    
   </head>
   <body>
 
@@ -43,7 +43,7 @@ Retailers report higher customer satisfaction & conversions by showing customer 
 There are plenty of personalization software tools available in the market which primarily bring in set of 
 recommendated items for a given product or a shopping cart. 
 <br>
-<div class="panel" style="font-family: 'Tangerine', serif;">
+<div class="panel" style="font-family: 'Raleway', serif; font-size: 20px;" >
 <p>
 e.g: <br>
 Customer who bought also bought <br>
